fix gen layout & collapsing inline-block 3-cols

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -238,6 +238,7 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
+  text-transform: uppercase;
 }
 
 strong {
@@ -255,10 +256,15 @@ cite, em {
 */
 a {
   color: #648880;
+  text-decoration: none;
 }
 
 a:hover {
   color: #a9b2b9;
+}
+
+p a {
+  border-bottom: 1px solid #dfe2e5;
 }
 
 
@@ -269,7 +275,7 @@ a:hover {
 */
 body {
   color: #888;
-  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
@@ -283,10 +289,37 @@ PRIMARY HEADER
  
  .logo {
      border-top: 4px solid #648880;
-     padding: 40px 0 22px 0;
      float: left;
+     font-size: 48px;
+     font-weight: 100;
+     letter-spacing: .5px;
+     line-height: 44px;
+     padding: 40px 0 22px 0;
+     text-transform: uppercase;
  }
 
+ .tagline {
+     margin: 66px 0 22px 0;
+     text-align: right;
+ }
+
+ .primary-nav {
+     font-size: 14px;
+     font-weight: 400;
+     letter-spacing: .5px;
+     text-transform: uppercase;
+ }
+
+
+ /*
+  ========================================
+  NAVIGATION
+  ========================================
+*/
+
+.nav {
+  text-align: right;
+}
 
  /* 
 ===========================================
@@ -315,20 +348,35 @@ HOME
 
 
  .hero {
+     line-height: 44px;
      padding: 22px 80px 66px 80px;
+     text-align: center;
  }
+.hero h2 {
+  font-size: 36px;
+}
+.hero p {
+  font-size: 24px;
+  font-weight: 100;
+}
 
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
 
 /* 
 ===========================================
 PRIMARY FOOTER
 ===========================================
  */
+ 
+  .primary-footer {
+      color: #648880;
+      font-size: 14px;
+    padding: 44px 0;
+  }
 
  .primary-footer small {
      float: left;
- }
-
- .primary-footer {
-     padding: 44px 0;
+     font-weight: 400;
  }
